# distribution-llm-platform

./: LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt
docs/architecture/: system-design.en.md  system-design.zh.md
k8s/manifests/: deployment.yaml
src/api-gateway/: Cargo.toml
src/api-gateway/src/: main.rs
src/inference-engine/: app.py
